--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@ body.light .highlight-scroll {
   import { getDatabase, ref, set, get, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
   const firebaseConfig = {
-    apiKey: "AIzaSyCJUn7NsGj8rRmFdVjcH7_6mz4htGPWtak", // Substitua pela sua chave de API real
-    authDomain: "designado-77317.firebaseapp.com",
-    databaseURL: "https://designado-77317-default-rtdb.firebaseio.com",
+    apiKey: "teste", // Substitua pela sua chave de API real
+    authDomain: "teste",
+    databaseURL: "teste",
     projectId: "designado-77317",
-    storageBucket: "designado-77317.appspot.com",
-    messagingSenderId: "1077191682053",
-    appId: "1:1077191682053:web:ce895678a1ebd4237c546c"
+    storageBucket: "teste",
+    messagingSenderId: "teste",
+    appId: "teste"
   };
 
   let fbApp;
